--- a/tcf_website/templates/course/course_professor.html
+++ b/tcf_website/templates/course/course_professor.html
@@ -194,12 +194,13 @@
 
         <div class="reviews-container mb-5 px-3">
             <div class="reviews-toolbar pb-2 d-flex flex-md-row flex-column justify-content-left justify-content-md-center">
-                <h3 class="mb-0 mr-4">{{ reviews|length }} Comments</h3>
-                <div class="d-flex flex-sm-row flex-column col p-0">
+                <h3 class="reviews-heading mb-0 mr-4">{{ reviews|length }} Comments</h3>
+                <div class="reviews-options d-flex flex-sm-row flex-column col p-0">
                     <a href="{% url 'new_review' %}" class="btn bg-tcf-orange text-white">
                       <i class="fa fa-plus" aria-hidden="true"></i> Add your review!
                     </a>
                     {% if reviews %}
+                    <!-- Show sorting options iff reviews exist -->
                     <div class="ml-auto">
                         <div class="dropdown btn-group ml-sm-4">
                             <button class="btn bg-white" disabled>Sort by</button>
@@ -221,8 +222,8 @@
                             </div>
                         </div>
                     </div>
+                    {% endif %}
                 </div>
-                {% endif %}
             </div>
             {% include "reviews/reviews.html" with reviews=reviews %}
         </div>
