--- a/tcf_website/templates/instructor/instructor.html
+++ b/tcf_website/templates/instructor/instructor.html
@@ -95,7 +95,11 @@
                             <i class="fa fa-chart-bar"></i> GPA
                         </small>
                         <p class="h4" id="gpa">
-                            {{ course.avg_gpa }}
+                            {% if course.avg_gpa != 0.0 %}
+                                {{ course.avg_gpa }}
+                            {% else %}
+                                &mdash;
+                            {% endif %}
                         </p>
                     </li>
                     <div class="col">
