--- a/tcf_website/templates/base/base.html
+++ b/tcf_website/templates/base/base.html
@@ -69,6 +69,7 @@
     return "";
   }
   // Update copyright year in the sidebar
+  // Adding a comment to test if deployment succeeded
   $(".year").text(new Date().getFullYear());
 </script>
 
