--- a/tcf_website/templates/common/notification.html
+++ b/tcf_website/templates/common/notification.html
@@ -1,16 +1,19 @@
 <div id="notification-panel" role="alert"
-     class="alert alert-info alert-dismissible text-left fade show">
-  <h4 class="alert-heading">Review Drive - Enter to win!</h4>
+     class="alert alert-info alert-dismissible text-left mb-5 fade show">
+  <h4 class="alert-heading">Apply to Our Team!</h4>
   <p>
-    Our Fall 2020 review drive is from 12/7 til 12/18.
-    During this time, any review written gives you one entry
-    into our sweepstakes for <b>four $25 gift cards!</b>
+    Want hands-on experience with developing a live website used by
+    thousands of students like you?
+    <b>theCourseForum</b> is looking for new members to join our team!
+    We are recruiting for several <b>web design, marketing, and engineering</b> roles.
+    No experience required!
   </p>
   <hr>
   <p class="mb-0 text-inline">
-    To enter, write a review for any class and put the hashtag <b>#tCF2020</b> in the description!
-    <a href="{% url 'new_review' %}" class="btn btn-sm btn-info ml-2">
-      Go Review <i class="fa fa-arrow-right" aria-hidden="true"></i>
+    Applications are open until <b>Monday 12/28 at midnight</b>.
+    To apply or learn more, click here.&nbsp;
+    <a href="tinyurl.com/tCFapply" class="btn btn-sm btn-info">
+      Apply Now <i class="fa fa-arrow-right" aria-hidden="true"></i>
     </a>
   </p>
 
