--- a/tcf_website/static/reviews/review.css
+++ b/tcf_website/static/reviews/review.css
@@ -23,7 +23,7 @@
     color: dodgerblue;
 }
 
-
+/*
 .review .review-date {
     color: var(--accent-color);
     font-size: 12px;
@@ -33,4 +33,4 @@
       color: var(--accent-color);
       font-size: 14px;
   }
-}
+} */
