--- a/tcf_website/templates/course/course_professor.html
+++ b/tcf_website/templates/course/course_professor.html
@@ -36,7 +36,7 @@
 
                     <!-- Instructor Dropdown -->
                     <div class="instructor dropdown">
-                      <a class="instructor-select btn btn-lg text-tcf-orange p-0 dropdown-toggle" href="#"
+                      <a class="instructor-select btn btn-lg text-tcf-orange p-0 mt-1 dropdown-toggle" href="#"
                          role="button" id="dropdownMenuLink" data-toggle="dropdown"
                          aria-haspopup="true" aria-expanded="false">
                          {{ instructor.last_name }}, {{ instructor.first_name }}
@@ -194,7 +194,7 @@
 
         <div class="reviews-container mb-5 px-3">
             <div class="reviews-toolbar pb-2 d-flex flex-md-row flex-column justify-content-left justify-content-md-center">
-                <h3 class="reviews-heading mb-0 mr-4">{{ reviews|length }} Comments</h3>
+                <h3 class="reviews-heading mb-0 mt-1 mr-4">{{ reviews|length }} Comments</h3>
                 <div class="reviews-options d-flex flex-sm-row flex-column col p-0">
                     <a href="{% url 'new_review' %}" class="btn bg-tcf-orange text-white">
                       <i class="fa fa-plus" aria-hidden="true"></i> Add your review!
