--- a/tcf_website/templates/reviews/review.html
+++ b/tcf_website/templates/reviews/review.html
@@ -41,42 +41,42 @@
                     <p class="card-text mb-2" style="white-space: pre-line;">{{ review.text }}</p>
                 </div>
 
-                <!-- Review Ratings -->
-                <div class="review-ratings d-flex justify-content-between align-items-end flex-wrap">
-                    <div class="d-flex text-center">
-                        <div>
-                            <strong>
-                                <p id="review-average">
-                                    <i class="fa fa-star fa-fw"></i> {{ review.average|floatformat:2 }}
-                                </p>
-                            </strong>
-                        </div>
-                        <div class="ml-4 text-muted">
-                            <i class="fas fa-thumbs-up"></i>
-                            {{ review.recommendability }}
-                        </div>
-                        <div class="ml-4 text-muted">
-                            <i class="fa fa-user"></i>
-                            {{ review.instructor_rating }}
-                        </div>
-                        <div class="ml-4 text-muted">
-                            <i class="far fa-smile-beam"></i>
-                            {{ review.enjoyability }}
-                        </div>
-                        <div class="ml-4 text-muted">
-                            <i class="fa fa-dumbbell fa-fw"></i>
-                            {{ review.difficulty }}
-                        </div>
-                        <div class="ml-4 text-muted">
-                            <i class="fa fa-hourglass-half fa-fw"></i>
-                            {{ review.hours_per_week }}
+                <div class="review-footer row mt-3">
+                    <!-- Review Ratings -->
+                    <div class="review-ratings col-sm-8 d-flex align-items-end">
+                        <div class="d-flex text-center flex-wrap mb-2">
+                            <div id="review-average" class="font-weight-bold">
+                                <i class="fa fa-star fa-fw"></i>
+                                {{ review.average|floatformat:2 }}
+                            </div>
+                            <div class="ml-4 text-muted">
+                                <i class="fas fa-thumbs-up"></i>
+                                {{ review.recommendability }}
+                            </div>
+                            <div class="ml-4 text-muted">
+                                <i class="fa fa-user"></i>
+                                {{ review.instructor_rating }}
+                            </div>
+                            <div class="ml-4 text-muted">
+                                <i class="far fa-smile-beam"></i>
+                                {{ review.enjoyability }}
+                            </div>
+                            <div class="ml-4 text-muted">
+                                <i class="fa fa-dumbbell fa-fw"></i>
+                                {{ review.difficulty }}
+                            </div>
+                            <div class="ml-4 text-muted">
+                                <i class="fa fa-hourglass-half fa-fw"></i>
+                                {{ review.hours_per_week }}
+                            </div>
                         </div>
                     </div>
 
-                    <div class="review-date text-right">
-                        <p>{{ review.semester }}</p>
-                        <p id="date">{{ review.created|date }}</p>
+                    <div class="review-date col-sm-4 pl-0 text-right text-tcf-orange">
+                        <h6 class="font-weight-bold">{{ review.semester }}</h6>
+                        <h6 id="date">Updated {{ review.created|date }}</h6>
                     </div>
+
                 </div>
             </div>
         </div>
