--- a/tcf_website/static/reviews/review.css
+++ b/tcf_website/static/reviews/review.css
@@ -1,3 +1,22 @@
+.review-content .review-text.collapse:not(.show) {
+  display: block;
+  height: 12rem;
+  overflow: hidden;
+}
+.review-content .review-text.collapsing {
+  height: 12rem;
+}
+
+.review-content a.collapsed::after {
+  content: '...See More';
+  color: var(--secondary-color);
+}
+
+.review-content a:not(.collapsed)::after {
+  content: 'See Less';
+  color: var(--secondary-color);
+}
+
 .review .upvote, .review .downvote {
     font-size: 2rem;
     color: #aaa;
