Fix Discord server message

--- a/tcf_website/templates/landing/landing.html
+++ b/tcf_website/templates/landing/landing.html
@@ -287,7 +287,7 @@
                                 and report any bugs that you find! <br><br>
                                 Questions, comments, or concerns? <br>
                                 Fill out the feedback form below and/or join our
-                                <a href="https://discord.gg/tAjzH7eyvW" class="text-tcf-blue">discord server</a>!</p>
+                                <a href="https://discord.gg/tAjzH7eyvW" class="text-tcf-blue">Discord server</a>!</p>
                         </div>
                         <div class="row justify-content-center">
                             <button type="button" data-dismiss="modal" class="btn btn-primary bg-tcf-indigo"> Thank
