Fix missing privacy link on TOS

--- a/tcf_website/templates/about/terms.html
+++ b/tcf_website/templates/about/terms.html
@@ -88,7 +88,7 @@
       <p>You are solely responsible for your interactions with other theCourseForum users. We reserve the right, but have no obligation, to monitor disputes between you and other users.</p>
 
       <h4>Privacy</h4>
-      <p>We care about the privacy of our users. Click hereto view the theCourseForum's Privacy Policy. By using the Site or the Service, you are consenting to have your personal data transferred to and processed in the United States.</p>
+      <p>We care about the privacy of our users. Click <a href="{% url 'privacy' %}">here</a> to view the theCourseForum's Privacy Policy. By using the Site or the Service, you are consenting to have your personal data transferred to and processed in the United States.</p>
 
       <h4>Disclaimers</h4>
       <p>We are not responsible or liable in any manner for any User Content posted on the Site or in connection with the Service, whether posted or caused by users of the Site, by theCourseForum, by third parties or by any of the equipment or programming associated with or utilized in the Site or the Service. Although we provide rules for user conduct and postings, we do not control and are not responsible for what users post, transmit or share on the Site and are not responsible for any offensive, inappropriate, obscene, unlawful or otherwise objectionable content you may encounter on the Site or in connection with any User Content or other Content. We are not responsible for the conduct, whether online or offline, of any user of the Site or Service.</p>
