--- a/tcf_website/templates/base/sidebar.html
+++ b/tcf_website/templates/base/sidebar.html
@@ -32,7 +32,7 @@
       </a>
     </li>
     <li>
-      <a href="#bugModal" data-toggle="modal" data-target="#bugModal" id="bugFormOpen"
+      <a href="#bugModal" data-toggle="modal" data-target="#bugModal"
          class="list-group-item list-group-item-action pb-0
          {% if request.resolver_match.url_name == 'feedback' %}active{% endif %}">
         <h4><i class="fa fa-thumbs-up fa-fw"></i></h4>
