Completed Ascending/Descending Sort Buttons

--- a/tcf_website/templates/common/toolbar.html
+++ b/tcf_website/templates/common/toolbar.html
@@ -33,7 +33,12 @@
             <button type="button" id="rating-sort-btn" class="btn btn-outline-primary">Rating</button>
             <button type="button" id="diff-sort-btn" class="btn btn-outline-primary">Difficulty</button>
             <button type="button" id="gpa-sort-btn" class="btn btn-outline-primary">GPA</button>
+            <div class="btn-group btn-group-sm" style = "margin-left: 3em">
+                <button type="button" id="ascending-order-btn" class="btn btn-outline-primary active"><i class="fa fa-angle-up"></i> Ascending Order</button>
+                <button type="button" id="descending-order-btn" class="btn btn-outline-primary"><i class="fa fa-angle-down"></i> Descending Order</button>
+            </div>
         </div>
+
         {% endif %}
     </div>
 </div>
