--- a/tcf_website/templates/common/notification.html
+++ b/tcf_website/templates/common/notification.html
@@ -1,19 +1,13 @@
 <div id="notification-panel" role="alert"
      class="alert alert-info alert-dismissible text-left mb-5 fade show">
-  <h4 class="alert-heading">Apply to Our Team!</h4>
+  <h4 class="alert-heading">Donate to theCourseForum!</h4>
   <p>
-    Want hands-on experience with developing a live website used by
-    thousands of students like you?
-    <b>theCourseForum</b> is looking for new members to join our team!
-    We are recruiting for several <b>web design, marketing, and engineering</b> roles.
-    No experience required!
+    theCourseForum keep our servers running through university grants and your donations. Just $4 keeps our servers up for a day, so we can keep serving you the best content.
   </p>
   <hr>
   <p class="mb-0 text-inline">
-    Applications are open until <b>Monday 12/28 at midnight</b>.
-    To apply or learn more, click here.&nbsp;
-    <a href="tinyurl.com/tCFapply" class="btn btn-sm btn-info">
-      Apply Now <i class="fa fa-arrow-right" aria-hidden="true"></i>
+    <a href="https://gf.me/u/yvhyfa" class="btn btn-sm btn-info">
+      Donate $4 today <i class="fa fa-arrow-right" aria-hidden="true"></i>
     </a>
   </p>
 
