import new banner into base

--- a/tcf_website/templates/base/base.html
+++ b/tcf_website/templates/base/base.html
@@ -20,6 +20,9 @@
     {% include "base/messages.html" %}
     <div class="content p-4 container-fluid text-center text-md-left h-100">
         <div class="row h-100">
+        <div class="container">
+          {% include "../common/notification.html" %}
+        </div>
         {% block content %}
         <p>Base content goes here.</p>
         {% endblock %}
