--- a/tcf_website/templates/login/extra_info_form.html
+++ b/tcf_website/templates/login/extra_info_form.html
@@ -11,11 +11,10 @@
         <h2 class="card-title">Welcome to theCourseForum!</h2>
         <form method="POST">
             {% csrf_token %}
-            <div class="form-group">
-                <div id="course-form-input" class="input-group">
-                    Please enter your graduation year: {{ form.grad_year }} <br>
-                    <input type="submit" value="Submit">
-                </div>
+            <div class="form-row justify-content-center align-items-baseline">
+                <label for="id_grad_yr"> Graduation Year </label>
+                <div class="col-2 ml-2"> {{form.grad_year}} </div>
+                <input class="btn btn-primary" type="submit" value="Submit">
             </div>
         </form>
         {% endblock %}
