add save course button

--- a/tcf_website/templates/course/course_professor.html
+++ b/tcf_website/templates/course/course_professor.html
@@ -48,8 +48,12 @@
                     </div>
                   </div>
 
+                  <div class="ml-auto pl-5 text-center">
+                      <button class="btn bg-tcf-orange text-white d-flex"> Save Course </button>
+                  </div>
+
                   <!-- Semester last taught -->
-                  <div class="ml-auto pl-5 btn-group text-center">
+                  <div class="btn-group ml-5 text-center">
                     <span class="p-2 bg-white">Last taught</span>
                     <span class="p-2 bg-tcf-blue text-white">{{ semester_last_taught }}</span>
                   </div>
