Fixed small issue

--- a/tcf_website/templates/reviews/review_form_content.html
+++ b/tcf_website/templates/reviews/review_form_content.html
@@ -46,7 +46,7 @@
 
 <!-- Review written content -->
 <div class="new-review-content form-row mb-3">
-  <h2 class="h4 review-form-header form-group col-12 my-4" id = "tell">
+  <h2 class="h4 review-form-header form-group col-12 my-4">
     Tell us more about the course and instructor</h2>
   <div class="form-group col mb-3">
     <textarea class="form-control" id="reviewtext" name="text" rows="5"
